--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "infinite-scroll": "^4.0.1",
     "loadingbar": "^1.1.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.10.0",
