--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "next": "14.1.0",
